# QGobang

./: .gitignore  CMakeLists.txt  QGobang.pro  README.md
QGobangClient/: CMakeLists.txt  CUiManager.cpp  CUiManager.h  QGobangClient.pro  main.cpp
QGobangClient/Ui/: widget.cpp  widget.h  widget.ui
QGobangServer/: CDBManager.cpp  CDBManager.h  CHttpService.cpp  CHttpService.h  CMakeLists.txt  CServerManager.cpp  CServerManager.h  QGobangServer.pro  main.cpp
QGobangTool/: CMakeLists.txt  QGobangRule.cpp  QGobangTool.pro
QGobangTool/include/: QGobangRule.h  QGobangUser.h
